# soccer-swarm-mopso

./: .gitignore  LICENSE  README.md  pyproject.toml
soccer_swarm/: __main__.py  config.py
soccer_swarm/agents/: base.py  elo.py  odds_implied.py  poisson.py  xgboost_agent.py
soccer_swarm/backtest/: engine.py  metrics.py
soccer_swarm/data/: client.py  csv_import.py  db.py  features.py
soccer_swarm/optimizer/: mopso.py  problem.py
soccer_swarm/output/: formatter.py
tests/: conftest.py  test_backtest_engine.py  test_base_agent.py  test_cli.py  test_client.py  test_db.py  test_elo.py  test_features.py  test_formatter.py  test_integration.py  test_metrics.py  test_mopso.py  test_odds_implied.py  test_poisson.py  test_problem.py  test_xgboost_agent.py
