[project]
name = "soccer-swarm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "pymoo>=0.6",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["soccer_swarm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
